@@ -7,6 +7,7 @@ import com.sprint.mission.discodeit.entity.ChannelType;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
@@ -14,111 +15,83 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
 import org.springframework.data.jpa.repository.config.EnableJpaAuditing;
 import org.springframework.test.context.ActiveProfiles;
 
+/**
+ * ChannelRepository 슬라이스 테스트
+ */
 @DataJpaTest
 @EnableJpaAuditing
 @ActiveProfiles("test")
 class ChannelRepositoryTest {
 
-  @Autowired
-  private ChannelRepository channelRepository;
+    @Autowired
+    private ChannelRepository channelRepository;
 
-  @Autowired
-  private TestEntityManager entityManager;
+    @Autowired
+    private TestEntityManager entityManager;
 
-  @Test
-  void findAllByTypeOrIdIn_모든공개채널_반환() {
-    // given
-    Channel publicChannel1 = new Channel(ChannelType.PUBLIC, "public-channel-1",
-        "Public Channel 1");
-    Channel publicChannel2 = new Channel(ChannelType.PUBLIC, "public-channel-2",
-        "Public Channel 2");
-    Channel privateChannel = new Channel(ChannelType.PRIVATE, null, null);
+    /**
+     * TestFixture: 채널 생성용 테스트 픽스처
+     */
+    private Channel createTestChannel(ChannelType type, String name) {
+        Channel channel = new Channel(type, name, "설명: " + name);
+        return channelRepository.save(channel);
+    }
 
-    entityManager.persist(publicChannel1);
-    entityManager.persist(publicChannel2);
-    entityManager.persist(privateChannel);
-    entityManager.flush();
+    @Test
+    @DisplayName("타입이 PUBLIC이거나 ID 목록에 포함된 채널을 모두 조회할 수 있다")
+    void findAllByTypeOrIdIn_ReturnsChannels() {
+        // given
+        Channel publicChannel1 = createTestChannel(ChannelType.PUBLIC, "공개채널1");
+        Channel publicChannel2 = createTestChannel(ChannelType.PUBLIC, "공개채널2");
+        Channel privateChannel1 = createTestChannel(ChannelType.PRIVATE, "비공개채널1");
+        Channel privateChannel2 = createTestChannel(ChannelType.PRIVATE, "비공개채널2");
 
-    // when
-    List<Channel> channels = channelRepository.findAllByTypeOrIdIn(ChannelType.PUBLIC, List.of());
+        channelRepository.saveAll(
+            Arrays.asList(publicChannel1, publicChannel2, privateChannel1, privateChannel2));
 
-    // then
-    assertThat(channels).hasSize(2);
-    assertThat(channels).extracting("type").containsOnly(ChannelType.PUBLIC);
-    assertThat(channels).extracting("name")
-        .containsExactlyInAnyOrder("public-channel-1", "public-channel-2");
-  }
+        // 영속성 컨텍스트 초기화
+        entityManager.flush();
+        entityManager.clear();
 
-  @Test
-  void findAllByTypeOrIdIn_비공개채널_ID목록에_해당되는_비공개채널만_반환() {
-    // given
-    Channel publicChannel = new Channel(ChannelType.PUBLIC, "public-channel", "Public Channel");
-    Channel privateChannel1 = new Channel(ChannelType.PRIVATE, null, null);
-    Channel privateChannel2 = new Channel(ChannelType.PRIVATE, null, null);
-    Channel privateChannel3 = new Channel(ChannelType.PRIVATE, null, null);
+        // when
+        List<UUID> selectedPrivateIds = List.of(privateChannel1.getId());
+        List<Channel> foundChannels = channelRepository.findAllByTypeOrIdIn(ChannelType.PUBLIC,
+            selectedPrivateIds);
 
-    entityManager.persist(publicChannel);
-    entityManager.persist(privateChannel1);
-    entityManager.persist(privateChannel2);
-    entityManager.persist(privateChannel3);
-    entityManager.flush();
+        // then
+        assertThat(foundChannels).hasSize(3); // 공개채널 2개 + 선택된 비공개채널 1개
 
-    // when 비공개 채널 조회 목록(1,2) //3은 목록에 없음
-    List<UUID> privateChannelIds = Arrays.asList(privateChannel1.getId(), privateChannel2.getId());
-    List<Channel> channels = channelRepository.findAllByTypeOrIdIn(ChannelType.PUBLIC,
-        privateChannelIds);
+        // 공개 채널 2개가 모두 포함되어 있는지 확인
+        assertThat(
+            foundChannels.stream().filter(c -> c.getType() == ChannelType.PUBLIC)
+                .count()).isEqualTo(2);
 
-    // then
-    assertThat(channels).hasSize(3); // public 1개, private 2개
+        // 선택된 비공개 채널만 포함되어 있는지 확인
+        List<Channel> privateChannels = foundChannels.stream()
+            .filter(c -> c.getType() == ChannelType.PRIVATE)
+            .toList();
+        assertThat(privateChannels).hasSize(1);
+        assertThat(privateChannels.get(0).getId()).isEqualTo(privateChannel1.getId());
+    }
 
-    // 모든 공개 채널 확인
-    assertThat(channels).filteredOn(c -> c.getType() == ChannelType.PUBLIC).hasSize(1);
+    @Test
+    @DisplayName("타입이 PUBLIC이 아니고 ID 목록이 비어있으면 비어있는 리스트를 반환한다")
+    void findAllByTypeOrIdIn_EmptyList_ReturnsEmptyList() {
+        // given
+        Channel privateChannel1 = createTestChannel(ChannelType.PRIVATE, "비공개채널1");
+        Channel privateChannel2 = createTestChannel(ChannelType.PRIVATE, "비공개채널2");
 
-    //
-    List<Channel> privateChannels = channels.stream()
-        .filter(c -> c.getType() == ChannelType.PRIVATE)
-        .toList();
+        channelRepository.saveAll(Arrays.asList(privateChannel1, privateChannel2));
 
-    assertThat(privateChannels).hasSize(2);
-    assertThat(privateChannels).extracting("id")
-        .containsExactlyInAnyOrder(privateChannel1.getId(), privateChannel2.getId());
-  }
+        // 영속성 컨텍스트 초기화
+        entityManager.flush();
+        entityManager.clear();
 
-  @Test
-  void findAllByTypeOrIdIn_공개채널과_지정된비공개채널_모두_반환() {
-    // given
-    Channel publicChannel1 = new Channel(ChannelType.PUBLIC, "public-channel-1",
-        "Public Channel 1");
-    Channel publicChannel2 = new Channel(ChannelType.PUBLIC, "public-channel-2",
-        "Public Channel 2");
-    Channel privateChannel1 = new Channel(ChannelType.PRIVATE, null, null);
-    Channel privateChannel2 = new Channel(ChannelType.PRIVATE, null, null);
+        // when
+        List<Channel> foundChannels = channelRepository.findAllByTypeOrIdIn(ChannelType.PUBLIC,
+            List.of());
 
-    entityManager.persist(publicChannel1);
-    entityManager.persist(publicChannel2);
-    entityManager.persist(privateChannel1);
-    entityManager.persist(privateChannel2);
-    entityManager.flush();
-
-    // when
-    List<UUID> privateChannelIds = List.of(privateChannel1.getId());
-    List<Channel> channels = channelRepository.findAllByTypeOrIdIn(ChannelType.PUBLIC,
-        privateChannelIds);
-
-    // then
-    assertThat(channels).hasSize(3); // public 2개, private 1개
-
-    // 공개 채널 검증
-    List<Channel> publicChannels = channels.stream()
-        .filter(c -> c.getType() == ChannelType.PUBLIC)
-        .toList();
-    assertThat(publicChannels).hasSize(2);
-
-    // 비공개 체널 검증
-    List<Channel> privateChannels = channels.stream()
-        .filter(c -> c.getType() == ChannelType.PRIVATE)
-        .toList();
-    assertThat(privateChannels).hasSize(1);
-    assertThat(privateChannels.get(0).getId()).isEqualTo(privateChannel1.getId());
-  }
-}
+        // then
+        assertThat(foundChannels).isEmpty();
+    }
+} 
